# erpnext_social_media_marketing

./: .gitignore  LICENSE  MANIFEST.in  README.md  manage.sh  pyproject.toml
.github/helpers/: apps.json
.github/workflows/: build_image.yml  pytest.yml
docker/: .env  Dockerfile  docker-compose.yaml
erpnext_social_media_marketing/: hooks.py  install.py  modules.txt
erpnext_social_media_marketing/config/: desktop.py
erpnext_social_media_marketing/erpnext_social_media_marketing/doctype/social_media_interaction/: social_media_interaction.js  social_media_interaction.json  social_media_interaction.py
erpnext_social_media_marketing/erpnext_social_media_marketing/workspace/social_media/: social_media.json
