[project]
name = "erpnext_social_media_marketing"
authors = [
    { name = "b»robotized group", email = "erp-devs@b-robotized.com"}
    { name = "Dr. Denis Stogl", email = "dr.denis@b-robotized.com"}
]
description = "CRM-integrated Social Media tracking for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/b-robotized/erpnext_social_media_marketing"
Repository = "https://github.com/b-robotized/erpnext_social_media_marketing.git"
"Bug Reports" = "https://github.com/b-robotized/erpnext_social_media_marketing/issues"
